[project]
name = "ha-rain-warner"
version = "0.6.5"
description = "High-precision rain radar integration for Home Assistant using DWD data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Fabian Fischer"}
]
keywords = ["home-assistant", "rain", "radar", "dwd", "weather", "nowcasting"]

[project.urls]
Homepage = "https://github.com/nodomain/ha-rain-warner"
Repository = "https://github.com/nodomain/ha-rain-warner"
Issues = "https://github.com/nodomain/ha-rain-warner/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: tests that require network access to DWD Open Data",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
